fix page layout issue caused by text overflow in code box

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -52,9 +52,8 @@ pre {
     line-height: 1.5rem;
     border-radius: 1.5rem;
     border: 2px solid rgb(207, 178, 236);
-    overflow-x: auto;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+    white-space: normal;
+    overflow-wrap: break-word;
     box-shadow: #222;
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
